--- a/desktop-fixture/pom.xml
+++ b/desktop-fixture/pom.xml
@@ -5,13 +5,13 @@
     <parent>
         <artifactId>sola-main</artifactId>
         <groupId>org.sola</groupId>
-        <version>20131027-SNAPSHOT</version>
+        <version>1.2-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <groupId>org.sola.test</groupId>
     <artifactId>sola-desktop-fixture</artifactId>
     <packaging>jar</packaging>
-    <version>20131027-SNAPSHOT</version>
+    <version>1.2-SNAPSHOT</version>
     <name>Test Desktop Fixture</name>
     <dependencies>
         <dependency>
